Chanege the Logo to <a> tag, wrap the hamburger button, fix the images

--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Crete+Round&family=Roboto:wght@700&display=swap');
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -23,7 +25,7 @@
   color: #fff;
 }
 
-#toolbar .logo h3 {
+#toolbar .logo a {
   font-family: "Roboto", sans-serif;
   font-style: normal;
   font-weight: 700;
@@ -56,7 +58,7 @@
 }
 
 #headline .headline_text .title {
-  font-family: "Crete Round", serif;
+  font-family: 'Crete Round', serif;
   font-style: normal;
   font-weight: 400;
   font-size: 3.5rem;
